@startuml
title Architecture

legend right
    |= Color |= Meaning |
    |<back:LightYellow>               | RTOS Task |
    |<back:LightBlue>                | Data |
endlegend

class Main  
{
    extern "C" void app_main()
}

class RtosTask <<abstract>> #lightYellow 
{
    +RtosTask();
    +virtual ~RtosTask();

    +void init(TaskProperties taskProperties);
    +virtual void taskEntry(void *param) = 0;
    +TaskHandle_t getTaskHandle() const
    +virtual QueueHandle_t getEventQueue() const
    +QueueHandle_t getDmxControllerEventQueue() const
    +const char *getTaskName() const
    +bool isInitialized() const

    -const char *task_name
    -const char *log_tag_
    -TaskHandle_t task_handle_
    -QueueHandle_t event_queue_
    -bool initialized_
    -QueueHandle_t main_event_queue_
}

class DmxController <<Task>> #LightYellow
{
    +DmxController(SevenSegmentDisplay *display, FootSwitch *footSwitch, \n Max3485Sender *dmx3485Sender, WebServer *webServer, NvStorage *nvStorage)
    +~DmxController()
    +virtual void init()
    +void taskLoop()

    -void initSubTasks()
    -void initMessages()
    -void performOtaUpdate(const char *url)
    -void logFirmwareInfo()

    -SevenSegmentDisplay *display_
    -FootSwitch *footSwitch_
    -Max3485Sender *max3485Sender_
    -WebServer *webServer_
    -NvStorage *nvStorage_
    
    -void taskEntry(void *param) override
}

Main -d-> DmxController
DmxController -|> RtosTask

class NvStorage #lightYellow {}
DmxController *-- NvStorage
NvStorage -u-|> RtosTask

class Max3485Sender #lightYellow {}
DmxController *- Max3485Sender
Max3485Sender -u-|> RtosTask

class FootSwitch #lightYellow {}
DmxController *-- FootSwitch
FootSwitch -u-|> RtosTask

class SevenSegmentDisplay #lightYellow {}
DmxController *-- SevenSegmentDisplay
SevenSegmentDisplay -u-|> RtosTask

class OtaUpdate #lightYellow {}
DmxController *-- OtaUpdate
OtaUpdate -u-|> RtosTask

class WebServer #lightYellow {}
DmxController *-- WebServer
WebServer -u-|> RtosTask

'class OscHandler <<RtosTask>> #lightYellow {}
'DmxController *-- OscHandler

'class ArtNetSender <<RtosTask>> #lightYellow {}
'DmxController *-- ArtNetSender
'ArtNetSender --> DmxPreset : Read

class DmxPresets <<Data>> #lightBlue {}
DmxController *-- DmxPresets

class DmxPreset <<Data>> #lightBlue {}
DmxPresets *--"20" DmxPreset

class Configuration <<Data>> #lightBlue {}
DmxController *-- Configuration

NvStorage *-- DmxPresets : Local\n copy
NvStorage *-- Configuration : Local\n copy

'class OscConfiguration <<Data>> #grey {}
'Configuration *-- OscConfiguration
'OscHandler -- OscConfiguration : Read

FootSwitch -- Configuration : Read

WebServer --> DmxPresets : Read/ \n Write
WebServer --> Configuration : Read/ \n Write

Max3485Sender --> DmxPreset : Read
@enduml 

@startuml 
title Data Classes

class DmxPresets <<Data>>
{ 
    +DmxPresets()
    +void init()

    +uint8_t getNumberOfFilledPresets() const
    +void setNumberOfFilledPresets(uint8_t numberOfFilledPresets)

    +DmxPreset &getCurrentPreset()
    +DmxPreset &getPreset(uint8_t index)
    +void setPreset(uint8_t index, const DmxPreset &preset)
    +void addPreset(uint8_t presetNumber, const char *name, const uint8_t *dmxValues)
    +void clearAll()

    +uint8_t getCurrentPresetIndex()
    +void setCurrentPresetIndex(uint8_t index)
    +uint8_t selectNextPreset()
    +uint8_t selectPreviousPreset()

    -uint8_t numberOfFilledPresets_
    -uint8_t currentPresetIndex_
    -std::vector<DmxPreset> presets_
}

class DmxPreset <<Data>> 
{
    +DmxPreset()

    +void setIndex(uint16_t index)
    +uint16_t getIndex() 

    +void setName(const char *name)
    +const char *getName() const

    +uint8_t getDmxValue(uint16_t channel) const
    +void setDmxValue(uint16_t channel, uint8_t value)
    +const uint8_t *getDmxValues() const
    +void setDmxValues(const uint8_t *values)

    +void clear();

    +void copyFrom(const DmxPreset &other)

    -uint16_t index_
    -char name_[32] 
    -uint8_t dmxValues_[NR_OF_DMX_CHANNELS]
}

DmxPresets *-- "20" DmxPreset
@enduml 

@startuml 
title Configuration Classes

class DmxController <<RtosTask>> #lightYellow {}

class FootSwitchTask <<RtosTask>> #lightYellow {}

class WebServer <<RtosTask>> #lightYellow {}

class NvStorage <<RtosTask>> #lightYellow {}

class Configuration 
{
    +bool footSwitchPolarityNormallyOpen()
    +void setFootSwitchPolarityNormallyOpen(bool normallyOpen)
    +uint16_t footSwitchLongPressTime()
    +void setFootSwitchLongPressTime(uint16_t longPressTime)

    +bool circularPresetNavigation()
    +void setCircularPresetNavigation(bool circular)
    +uint8_t numberOfFilledPresets()
    +void setNumberOfFilledPresets(uint8_t numberOfFilledPresets)
    
    -bool footSwitchPolarityNormallyOpen_
    -uint16_t footSwitchLongPressTime_

    -bool circularPresetNavigation_
    -uint8_t numberOfFilledPresets_
}

DmxController *-- Configuration
FootSwitchTask --> Configuration : read
WebServer --> Configuration : read/write
NvStorage --> Configuration : read/write

' class OscConfiguration <<Data>>
' {
'     +const char* GetDestinationAddress()
'     +void SetDestinationAddress(const char* address)
'     +int GetReceivePort()
'     +void SetReceivePort(int port)
'     +void SetSendPort(int port)
'     +int GetSendPort()
'     -string destinationAddress
'     -int receivePort
'     -int sendPort
' }
' Configuration *-- OscConfiguration

' class DmxTransmission <<Data>>
' {
'     +bool IsSendViaArtNet()
'     +void SetSendViaArtNet(bool send)
'     +bool IsSendToDmxConnector()
'     +void SetSendToDmxConnector(bool send)
'     -bool sendViaArtNet
'     -bool sendToDmxConnector
' }
' Configuration *-- DmxTransmission
@enduml 

@startuml
title NvRam Storage

class RtosTask <<abstract>> #lightYellow 
{
    +RtosTask();
    +virtual ~RtosTask();

    +void init(TaskProperties taskProperties);
    +virtual void taskEntry(void *param) = 0;
    +TaskHandle_t getTaskHandle() const
    +virtual QueueHandle_t getEventQueue() const
    +QueueHandle_t getDmxControllerEventQueue() const
    +const char *getTaskName() const
    +bool isInitialized() const

    -const char *task_name
    -const char *log_tag_
    -TaskHandle_t task_handle_
    -QueueHandle_t event_queue_
    -bool initialized_
   - QueueHandle_t main_event_queue_
}

class NvStorage 
{
    +NvStorage()
    +~NvStorage()

    +virtual void init(RtosTask::TaskProperties taskProperties)

    -const char *log_tag_
    -int task_priority_
    -int queue_capacity_

    -nvs_handle_t configuration_nvs_handle
    -nvs_handle_t presets_nvs_handle
    -const char *configuration_namespace_name
    -const char *presets_namespace_name

    -void taskEntry(void *param) override
    -void taskLoop()
}
NvStorage -u-|> RtosTask

class NvPresetStorage
{
    +SplitDmxPreset(in const DmxPreset& preset)
    +CombineDmxPreset(out const DmxPreset& preset)
}
NvStorage *-- NvPresetStorage

class NvPresetStoragePart1
{
    -char name[32]
    -uint8_t dmxDataPart1[256]
}
NvPresetStorage *-- NvPresetStoragePart1

class NvPresetStoragePart2
{
    -uint8_t dmxDataPart2[256]
}
NvPresetStorage *-- NvPresetStoragePart2
@enduml

@startuml 
title Init

actor User
participant Main
participant DmxController
participant WebServer
participant SevenSegmentDisplay
participant FootSwitch
participant NvStorage

Main -> DmxController : DmxController()
Main -> DmxController : init()
activate DmxController
    DmxController -> DmxController : initSubTasks()
    activate DmxController
        DmxController -> SevenSegmentDisplay: SevenSegmentDisplay()
        DmxController -> SevenSegmentDisplay : init()
        DmxController -> FootSwitch : FootSwitch()
        DmxController -> FootSwitch : init()
        DmxController -> NvStorage : NvStorage()
        DmxController -> NvStorage : init()
        DmxController -> WebServer : WebServer()
        DmxController -> WebServer : init() 
        note over DmxController
            constructor and init for other sub tasks
        end note
    DmxController -> DmxController : initMessages()

    ref over DmxController : Load Configuration

    ref over DmxController : Load Presets
@enduml 

@startuml 
title Load Configuration 

legend top
    |= Color |= Meaning |
    |<back:black>              | Method call or statements |
    |<back:lightBlue>             | Message/Event |
    |<back:orange>             | Mutex semaphore operation |
endlegend

participant Main
participant DmxController
participant NvStorage
participant FootSwitch
participant SevenSegmentDisplay
participant WebServer

Main -> DmxController : initMessages()
activate DmxController
    DmxController --> NvStorage : <back:lightblue> LOAD_CONFIGURATION()
    activate NvStorage
        NvStorage -> DmxController : <back:orange> Lock Configuration
        NvStorage -> NvStorage : Read configuration from NVRAM
        NvStorage -> DmxController : Write to configuration instance
        NvStorage -> DmxController : <back:orange> Unlock Configuration

        alt Configuration loaded successfully from NVRAM
            NvStorage -> DmxController : <back:lightblue> CONFIGURATION_LOADED()

            DmxController -> FootSwitch : <back:lightblue> UPDATE_CONFIGURATION()
            activate FootSwitch
                FootSwitch -> DmxController : <back:orange> Lock Configuration
                FootSwitch -> FootSwitch : Copy foot switch configuration \n to internal variables
                FootSwitch -> DmxController : <back:orange> Unlock Configuration
            deactivate FootSwitch

            DmxController -> WebServer : <back:lightblue> UPDATE_CONFIGURATION() 
            activate WebServer
                WebServer -> DmxController : <back:orange> Lock Configuration
                WebServer -> WebServer : Copy web server configuration \n to internal variables
                WebServer -> DmxController : <back:orange> Unlock Configuration
            deactivate WebServer

        else error loading configuration from NVRAM 
            note over DmxController #red
                NOT IMPLEMENTED YET
            end note
            NvStorage -> DmxController : <back:lightblue> ERROR(NV_STORAGE_LOAD_CONFIGURATION_FAILED)
            DmxController -> SevenSegmentDisplay : <back:lightblue> DISPLAY_ERROR(NV_STORAGE_LOAD_CONFIGURATION_FAILED)
        end
    deactivate NvStorage
deactivate DmxController

@enduml 

@startuml
    title Load Presets

    DmxController --> NvStorage : LOAD_PRESETS
    loop each filled preset
        NvStorage -> NvStorage : Read preset part 1 from NVRAM
        NvStorage -> NvStorage : Read preset part 2 from NVRAM
    end

    note left of NvStorage
        In case of an error reading NVRAM, stop reading.
    end note

    group Load Presets (after NvStorage has loaded presets)
        note right of DmxController
            Similar flow as Load Configuration, but with presets instead of configuration.
        end note
    end
deactivate DmxController
@enduml 

@startuml
title Message Queues Next/Prev Preset

actor User
participant DmxController
participant FootSwitch
participant Max3485Sender
participant SevenSegmentDisplay

User -> FootSwitch : Short/Long
note right of FootSwitch
    Assuming a short press, resulting in a 
    SELECT_NEXT_PRESET message being sent to DmxController.
    Similar flow for SELECT_PREVIOUS_PRESET.
end note
FootSwitch --> DmxController : SELECT_NEXT_PRESET
DmxController -> DmxController : Update current preset index

DmxController --> Max3485Sender : UPDATE_PRESET
Max3485Sender -> DmxController : copy_current_dmx_data_into(DmxPreset* )
DmxController -> DmxController : Take mutex
DmxController -> DmxController : Copy DMX data to DmxPreset instance
DmxController -> DmxController : Release mutex
DmxController -> Max3485Sender : Filled DmxPreset instance

DmxController --> SevenSegmentDisplay : UPDATE_PRESET
SevenSegmentDisplay -> DmxController : get_current_preset_index()
DmxController -> DmxController : Take mutex
DmxController -> DmxController : Get current preset index
DmxController -> DmxController : Release mutex
DmxController --> SevenSegmentDisplay : current preset index
SevenSegmentDisplay -> SevenSegmentDisplay : Internal handling
@enduml

@startuml
title Webserver Update Config/Presets

user -> WebServer : Transmit new \n configuration/presets
WebServer --> DmxController : STORE_CONFIGURATION
DmxController -> DmxController : Copy to internal configuration
DmxController --> NvStorage : STORE_CONFIGURATION
NvStorage -> DmxController : get_configuration()
DmxController -> DmxController : Take mutex
DmxController -> DmxController : Copy configuration
DmxController -> DmxController : Release mutex
DmxController --> NvStorage : configuration
NvStorage -> NvStorage : Store configuration in NVRAM

DmxController --> FootSwitch : SET_FOOT_SWITCH_CONFIGURATION (as Init)
DmxController --> OscSender : SET_OSC_CONFIGURATION (as Init)

WebServer --> DmxController : STORE_PRESETS
DmxController -> DmxController : Copy to internal presets
DmxController --> NvStorage : STORE_PRESETS
NvStorage -> DmxController : get_presets()
DmxController -> DmxController : Take mutex
DmxController -> DmxController : Copy presets
DmxController -> DmxController : Release mutex
DmxController --> NvStorage : presets

loop For each preset
    NvStorage -> NvStorage : Split preset into part 1 and part 2
    NvStorage -> NvStorage : Store preset part 1 in NVRAM
    alt Error storing preset part 1 in NVRAM
        NvStorage --> DmxController : ERROR(NV_STORAGE_STORE_PRESET_FAILED)
        DmxController --> SevenSegmentDisplay : DISPLAY_ERROR(NV_STORAGE_STORE_PRESET_FAILED)
    end
    NvStorage -> NvStorage : Store preset part 2 in NVRAM
    alt Error storing preset part 2 in NVRAM
        NvStorage --> DmxController : ERROR(NV_STORAGE_STORE_PRESET_FAILED)
        DmxController --> SevenSegmentDisplay : DISPLAY_ERROR(NV_STORAGE_STORE_PRESET_FAILED)
    end
end

ref over DmxController : Update Preset Data (as in Message Queues Next/Prev Preset)
@enduml

@startuml 
title OTA Update

participant WebServer
participant RTOS
participant DmxController
participant OtaUpdate
participant SevenSegmentDisplay

WebServer --> DmxController : START_OTA
DmxController --> OtaUpdate : START_OTA 
OtaUpdate -> OtaUpdate : Perform OTA update
alt OTA update successful
    OtaUpdate --> DmxController : OTA_SUCCESS
    DmxController -> DmxController : Handle termination if needed
    DmxController --> RTOS: Reset
else OTA update failed
    OtaUpdate --> DmxController : ERROR(OTA_UPDATE_FAILED)
    DmxController --> SevenSegmentDisplay : DISPLAY_ERROR(OTA_UPDATE_FAILED)
end
@enduml 
